# django-htmx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  download_htmx.py  download_htmx_extensions.py  download_htmx_exts.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yml
docs/: Makefile  changelog.rst  conf.py  configuration.rst  example_project.rst  extension.rst  extension_script.rst  http.rst  index.rst  installation.rst  middleware.rst  requirements.txt  spelling_wordlist.txt  template_tags.rst  testing.rst  tips.rst
docs/source/: conf.py  contributing.rst  extension.rst  http.rst  index.rst  installation.rst  middleware.rst  spelling_wordlist.txt  tips.rst
example/: .gitignore  README.rst  download_htmx.py  download_htmx_extensions.py  manage.py  requirements.in  requirements.txt
example/example/: context_processors.py  settings.py  urls.py  views.py
example/example/core/: context_processors.py  forms.py  models.py  views.py
example/example/core/management/commands/: generatedata.py
example/example/core/migrations/: 0001_initial.py
example/example/core/templatetags/: example_tags.py
example/example/static/: app.js  htmx.js  htmx.min.js  mvp.css
example/example/static/ext/: debug.js  event-header.js
example/example/templates/: _base.html  _partial.html  attribute_test.html  cbv-full-rendering.html  cbv-partial-rendering.html  csrf-demo-checker.html  csrf-demo.html  error-demo.html  index.html  middleware-tester-table.html  middleware-tester.html  partial-rendering.html  polling-demo.html
example/example/templates/partials/: person_list.html
htmx/: views.py
htmx/templates/htmx/: wrapper.html
requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django22.txt  py39-django30.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt  requirements.in
src/: django_htmx.py  template.py
src/django_htmx/: __init__.py  context_processors.py  decorators.py  http.py  jinja.py  middleware.py  template.py  testing.py  views.py
src/django_htmx/management/commands/: downloadhtmx.py  htmx.py
src/django_htmx/static/: django-htmx.js
src/django_htmx/static/django_htmx/: django-htmx.js  htmx-ext-head-support.js  htmx-ext-htmx-1-compat.js  htmx-ext-preload.js  htmx-ext-response-targets.js  htmx-ext-sse.js  htmx-ext-ws.js
src/django_htmx/static/django_htmx/ext/: head-support-2.js  head-support-2.min.js  preload-2.js  preload-2.min.js  sse-2.js  sse-2.min.js  ws-2.js  ws-2.min.js
src/django_htmx/templatetags/: django_htmx.py
src/templatetags/: htmx.py
tests/: settings.py  test_decorators.py  test_django_htmx.py  test_docs.py  test_http.py  test_jinja.py  test_middleware.py  test_testing.py  test_views.py  urls.py  views.py
tests/requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py310-django52.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py311-django52.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py313-django51.txt  py313-django52.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt
tests/templatetags/: test_django_htmx.py
